--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1> La web del pepino </h1>
 <h2> Nuestra empresa se dedica a el cultivo de los pepinos </h2>
+<p> Los pepinos son un vegetal importante en el día a día, y encima a nuestro dios Vegetta777 le gustan los pepinos </p>
